crates/macros/tests/debug_job/fail/single_wrong_return_tuple.rs
#![allow(unused_parens)]

struct NotIntoJobResult;

#[blueprint_macros::debug_job]
async fn job() -> (NotIntoJobResult) {
    panic!()
}

fn main() {}
